# circt

./: CMakeLists.txt  dual-medium-ops.json  dual-medium-ops.txt  dual-small-ops.json  dual-small-ops.txt  histograms.py  large-ops.json  large-ops.txt  medium-ops.json  medium-ops.txt  modSizes.txt  ops.json  ops.txt  rocket.mlir  small-ops.json  small-ops.txt
experimental/axi4-e2e/: README.md  run.sh
experimental/axi4-e2e/designs/: mixed_fanout.mlir  multi.mlir  single.mlir
experimental/axi4-e2e/sim/: tb_axitop.sv  tb_axitop_mixed_fanout.sv  tb_axitop_multi.sv  tb_axitop_single.sv
include/circt/: InitAllDialects.h  InitAllPasses.h
include/circt/Analysis/: OpCountAnalysis.h
include/circt/Conversion/: AXI4ToHW.h  HWToSMT.h  Passes.h  Passes.td  VerifToSMT.h
include/circt/Dialect/: CMakeLists.txt
include/circt/LogicalEquivalence/: Circuit.h  LogicExporter.h  Solver.h  Utility.h
include/circt/Verification/: Circuit.h  LogicExporter.h  Solver.h  Utility.h
integration_test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
integration_test/circt-bmc/: comb.mlir  rising-clocks-only.mlir  seq-errors.mlir  seq.mlir
integration_test/circt-mc/: comb.mlir
lib/: CMakeLists.txt
lib/Analysis/: OpCountAnalysis.cpp
lib/CAPI/Conversion/: CMakeLists.txt
lib/CAPI/Dialect/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/AXI4ToHW/: AXI4ToHW.cpp  AXI4ToHWInternals.h  CMakeLists.txt  PULPMapping.cpp
lib/Conversion/CombToLLVM/: CombToLLVM.cpp
lib/Conversion/CombToSMT/: CombToSMT.cpp
lib/Dialect/: CMakeLists.txt
lib/LogicalEquivalence/: Circuit.cpp  LogicExporter.cpp  Solver.cpp
lib/Transforms/: PrintOpCount.cpp
lib/Verification/: CMakeLists.txt  Circuit.cpp  LogicExporter.cpp  Solver.cpp
test/circt-mc/: compreg.mlir
tools/: CMakeLists.txt
tools/arcilator/: arcilator.cpp
tools/circt-bmc/: circt-bmc.cpp
tools/circt-lec/: CMakeLists.txt  LogicExporter.cpp  circt-lec.cpp
tools/circt-mc/: CMakeLists.txt  Circuit.cpp  Circuit.h  LogicExporter.cpp  LogicExporter.h  Model.cpp  Model.h  Solver.cpp  Solver.h  circt-mc.cpp
tools/circt-opt/: CMakeLists.txt
tools/circt-test/: CMakeLists.txt  circt-test-runner-btormc.py  circt-test.cpp
tools/contract-splitter/: CMakeLists.txt  contract-splitter.cpp
tv/: 10state_err_fsm.mlir  benchmark.py  benchmark_results_10.txt  benchmark_results_50.txt  bmc.ll  bmc.mlir  err_benchmark.py  err_benchmark_results_10.txt  err_benchmark_results_50.txt  exec.mlir  fsm_10states_0loops.mlir  rtl.mlir  run_tv.py  tv.mlir
tv/err_benchmarks/: fsm_100states_0loops.mlir  fsm_110states_0loops.mlir  fsm_120states_0loops.mlir  fsm_130states_0loops.mlir  fsm_140states_0loops.mlir  fsm_150states_0loops.mlir  fsm_20states_0loops.mlir  fsm_30states_0loops.mlir  fsm_40states_0loops.mlir  fsm_50states_0loops.mlir  fsm_60states_0loops.mlir  fsm_70states_0loops.mlir  fsm_80states_0loops.mlir  fsm_90states_0loops.mlir
tv/testing/: exec.mlir  fsmt.mlir  how_to_print.mlir  log.txt  rtl.mlir  run.sh  tv.mlir  tvnow.mlir  tvnowcopy.bk  tvnowcopy.mlir  tvnowworks.bk
(+93 files in other folders)
